// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionHeader renders 100% pie 1`] = `
<div>
  <div
    className="box-row box-row--normal"
  >
    <div
      className="child-wrapper"
      style={
        Object {
          "width": "50.00000%",
        }
      }
    >
      <div
        className="report-section"
      >
        <div
          className="section-header"
        >
          <p
            className="section-header__title"
          >
            Acquisition
          </p>
        </div>
        <div
          className="panel panel--default small-box"
        >
          <div
            className="small-box__labels"
          >
            <span
              className="small-box__labels__name"
            >
              Leased Unit Change
            </span>
            <span
              className="small-box__labels__detail"
            >
              Target: 11
            </span>
          </div>
          <div
            className="small-box__outer-content"
          >
            <span
              className="small-box__inner-content"
            >
              <span
                className="delta-layout"
              >
                <span
                  className="formatted-value-with-symbol"
                >
                  <span
                    className="formatted-value-with-symbol__plus"
                  >
                    +
                  </span>
                  9
                </span>
              </span>
            </span>
          </div>
        </div>
        <div
          className="panel panel--default small-box"
        >
          <div
            className="small-box__labels"
          >
            <span
              className="small-box__labels__name"
            >
              Acquisition Investment
            </span>
            <span
              className="small-box__labels__detail"
            >
              Target: $15k
            </span>
          </div>
          <div
            className="small-box__outer-content"
          >
            <span
              className="small-box__inner-content"
            >
              <span
                className="delta-layout"
              >
                <span
                  className="formatted-value-with-symbol"
                >
                  $14k
                </span>
              </span>
            </span>
          </div>
        </div>
        <div
          className="panel panel--default small-box"
        >
          <div
            className="small-box__labels"
          >
            <span
              className="small-box__labels__name"
            >
              Est. Acquired Leasing Revenue
            </span>
            <span
              className="small-box__labels__detail"
            >
              Target: $228.5k
            </span>
          </div>
          <div
            className="small-box__outer-content"
          >
            <span
              className="small-box__inner-content"
            >
              <span
                className="delta-layout"
              >
                <span
                  className="formatted-value-with-symbol"
                >
                  <span
                    className="formatted-value-with-symbol__plus"
                  >
                    +
                  </span>
                  $199k
                </span>
              </span>
            </span>
          </div>
        </div>
        <div
          className="panel panel--default small-box"
        >
          <div
            className="small-box__labels"
          >
            <span
              className="small-box__labels__name"
            >
              Acquisition ROMI
            </span>
            <span
              className="small-box__labels__detail"
            >
              Target: 7
            </span>
          </div>
          <div
            className="small-box__outer-content"
          >
            <span
              className="small-box__inner-content"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <span
                className="delta-layout"
              >
                <span
                  className="formatted-value-with-symbol"
                >
                  14
                  <span
                    className="formatted-value-with-symbol__times"
                  >
                    x
                  </span>
                </span>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="child-wrapper"
      style={
        Object {
          "width": "50.00000%",
        }
      }
    >
      <div
        className="report-section"
      >
        <div
          className="section-header"
        >
          <p
            className="section-header__title"
          >
            Retention
          </p>
        </div>
        <div
          className="panel panel--default small-box"
        >
          <div
            className="small-box__labels"
          >
            <span
              className="small-box__labels__name"
            >
              Lease Renewals
            </span>
            <span
              className="small-box__labels__detail"
            >
              Target: 10
            </span>
          </div>
          <div
            className="small-box__outer-content"
          >
            <span
              className="small-box__inner-content"
            >
              <span
                className="delta-layout"
              >
                <span
                  className="formatted-value-with-symbol"
                >
                  7
                </span>
                <span
                  className="delta-layout__section"
                >
                  <div
                    className="delta-indicator"
                  >
                    <span
                      className="delta-indicator__delta"
                    >
                      2
                    </span>
                     
                    <span
                      className="delta-indicator__arrow delta-indicator__trend-up"
                    >
                      <svg
                        aria-hidden="true"
                        color="inherit"
                        focusable="false"
                        height={5}
                        role="presentation"
                        viewBox="0 0 10 5"
                        width={10}
                      >
                        <path
                          d="M5 0l5 5H0z"
                          fill="currentColor"
                          fillRule="evenodd"
                        />
                      </svg>
                    </span>
                  </div>
                </span>
              </span>
            </span>
          </div>
        </div>
        <div
          className="panel panel--default small-box"
        >
          <div
            className="small-box__labels"
          >
            <span
              className="small-box__labels__name"
            >
              Retention Investment
            </span>
            <span
              className="small-box__labels__detail"
            >
              Target: $2k
            </span>
          </div>
          <div
            className="small-box__outer-content"
          >
            <span
              className="small-box__inner-content"
            >
              <span
                className="delta-layout"
              >
                <span
                  className="formatted-value-with-symbol"
                >
                  $2k
                </span>
              </span>
            </span>
          </div>
        </div>
        <div
          className="panel panel--default small-box"
        >
          <div
            className="small-box__labels"
          >
            <span
              className="small-box__labels__name"
            >
              Est. Retained Leasing Revenue
            </span>
            <span
              className="small-box__labels__detail"
            >
              Target: $266.6k
            </span>
          </div>
          <div
            className="small-box__outer-content"
          >
            <span
              className="small-box__inner-content"
            >
              <span
                className="delta-layout"
              >
                <span
                  className="formatted-value-with-symbol"
                >
                  <span
                    className="formatted-value-with-symbol__plus"
                  >
                    +
                  </span>
                  $155.1k
                </span>
              </span>
            </span>
          </div>
        </div>
        <div
          className="panel panel--default small-box"
        >
          <div
            className="small-box__labels"
          >
            <span
              className="small-box__labels__name"
            >
              Retention ROMI
            </span>
            <span
              className="small-box__labels__detail"
            >
              Target: 142
            </span>
          </div>
          <div
            className="small-box__outer-content"
          >
            <span
              className="small-box__inner-content"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <span
                className="delta-layout"
              >
                <span
                  className="formatted-value-with-symbol"
                >
                  78
                  <span
                    className="formatted-value-with-symbol__times"
                  >
                    x
                  </span>
                </span>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="box-row box-row--normal"
  >
    <div
      className="child-wrapper"
      style={
        Object {
          "width": "50.00000%",
        }
      }
    >
      <div
        className="investment-allocation"
      >
        <div
          className="report-section"
        >
          <div
            className="section-header"
          >
            <p
              className="section-header__title"
            >
              acquisition INVESTMENT ALLOCATIONS
            </p>
          </div>
          <div
            className="investment-allocation__body"
          >
            <div
              className="investment-allocation__chart"
            >
              <div
                className="VictoryContainer"
                style={
                  Object {
                    "height": "100%",
                    "pointerEvents": "none",
                    "position": "relative",
                    "touchAction": "none",
                    "width": "100%",
                  }
                }
              >
                <svg
                  aria-labelledby="victory-container-3-title victory-container-3-desc"
                  height={NaN}
                  role="img"
                  style={
                    Object {
                      "height": "100%",
                      "pointerEvents": "all",
                      "width": "100%",
                    }
                  }
                  viewBox="0 0 NaN NaN"
                  width={NaN}
                >
                  <g>
                    <path
                      d="M0,0Z"
                      role="presentation"
                      shapeRendering="auto"
                      style={
                        Object {
                          "fill": undefined,
                          "padding": 10,
                          "stroke": "transparent",
                          "strokeWidth": 1,
                        }
                      }
                      transform="translate(NaN, NaN)"
                    />
                    <path
                      d="M0,0Z"
                      role="presentation"
                      shapeRendering="auto"
                      style={
                        Object {
                          "fill": undefined,
                          "padding": 10,
                          "stroke": "transparent",
                          "strokeWidth": 1,
                        }
                      }
                      transform="translate(NaN, NaN)"
                    />
                    <path
                      d="M0,0Z"
                      role="presentation"
                      shapeRendering="auto"
                      style={
                        Object {
                          "fill": undefined,
                          "padding": 10,
                          "stroke": "transparent",
                          "strokeWidth": 1,
                        }
                      }
                      transform="translate(NaN, NaN)"
                    />
                    <path
                      d="M0,0Z"
                      role="presentation"
                      shapeRendering="auto"
                      style={
                        Object {
                          "fill": undefined,
                          "padding": 10,
                          "stroke": "transparent",
                          "strokeWidth": 1,
                        }
                      }
                      transform="translate(NaN, NaN)"
                    />
                    <text
                      direction="inherit"
                      dx={0}
                      dy={-2.0300000000000002}
                      x={NaN}
                      y={NaN}
                    >
                      <tspan
                        dx={0}
                        style={
                          Object {
                            "fill": "#252525",
                            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Seravek', 'Trebuchet MS', sans-serif",
                            "fontSize": 14,
                            "letterSpacing": "normal",
                            "padding": 20,
                            "stroke": "transparent",
                          }
                        }
                        textAnchor="middle"
                        x={NaN}
                      >
                        
                      </tspan>
                    </text>
                    <text
                      direction="inherit"
                      dx={0}
                      dy={-2.0300000000000002}
                      x={NaN}
                      y={NaN}
                    >
                      <tspan
                        dx={0}
                        style={
                          Object {
                            "fill": "#252525",
                            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Seravek', 'Trebuchet MS', sans-serif",
                            "fontSize": 14,
                            "letterSpacing": "normal",
                            "padding": 20,
                            "stroke": "transparent",
                          }
                        }
                        textAnchor="middle"
                        x={NaN}
                      >
                        
                      </tspan>
                    </text>
                    <text
                      direction="inherit"
                      dx={0}
                      dy={4.97}
                      x={NaN}
                      y={NaN}
                    >
                      <tspan
                        dx={0}
                        style={
                          Object {
                            "fill": "#252525",
                            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Seravek', 'Trebuchet MS', sans-serif",
                            "fontSize": 14,
                            "letterSpacing": "normal",
                            "padding": 20,
                            "stroke": "transparent",
                          }
                        }
                        textAnchor="start"
                        x={NaN}
                      >
                        70%
                      </tspan>
                    </text>
                    <text
                      direction="inherit"
                      dx={0}
                      dy={4.97}
                      x={NaN}
                      y={NaN}
                    >
                      <tspan
                        dx={0}
                        style={
                          Object {
                            "fill": "#252525",
                            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Seravek', 'Trebuchet MS', sans-serif",
                            "fontSize": 14,
                            "letterSpacing": "normal",
                            "padding": 20,
                            "stroke": "transparent",
                          }
                        }
                        textAnchor="end"
                        x={NaN}
                      >
                        30%
                      </tspan>
                    </text>
                  </g>
                </svg>
                <div
                  style={
                    Object {
                      "height": "100%",
                      "left": 0,
                      "position": "absolute",
                      "top": 0,
                      "width": "100%",
                      "zIndex": 99,
                    }
                  }
                >
                  <svg
                    height={NaN}
                    style={
                      Object {
                        "height": "100%",
                        "overflow": "visible",
                        "width": "100%",
                      }
                    }
                    viewBox="0 0 NaN NaN"
                    width={NaN}
                  />
                </div>
              </div>
            </div>
            <div
              className="investment-allocation__expenses"
            >
              <div
                className="investment-allocation__row"
              >
                <div
                  className="investment-allocation__title investment-allocation__title--reputation-building"
                >
                  Reputation Building
                </div>
                <div
                  className="investment-allocation__value"
                >
                  $20k
                </div>
              </div>
              <div
                className="investment-allocation__row"
              >
                <div
                  className="investment-allocation__title investment-allocation__title--demand-creation"
                >
                  Demand Creation
                </div>
                <div
                  className="investment-allocation__value"
                >
                  $48k
                </div>
              </div>
              <div
                className="investment-allocation__row investment-allocation__row--empty"
              >
                <div
                  className="investment-allocation__title investment-allocation__title--leasing-enablement"
                >
                  Leasing Enablement
                </div>
                <div
                  className="investment-allocation__value"
                >
                  $0
                </div>
              </div>
              <div
                className="investment-allocation__row investment-allocation__row--empty"
              >
                <div
                  className="investment-allocation__title investment-allocation__title--market-intelligence"
                >
                  Market Intelligence
                </div>
                <div
                  className="investment-allocation__value"
                >
                  $0
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="child-wrapper"
      style={
        Object {
          "width": "50.00000%",
        }
      }
    >
      <div
        className="investment-allocation"
      >
        <div
          className="report-section"
        >
          <div
            className="section-header"
          >
            <p
              className="section-header__title"
            >
              retention INVESTMENT ALLOCATIONS
            </p>
          </div>
          <div
            className="investment-allocation__body"
          >
            <div
              className="investment-allocation__chart"
            >
              <div
                className="VictoryContainer"
                style={
                  Object {
                    "height": "100%",
                    "pointerEvents": "none",
                    "position": "relative",
                    "touchAction": "none",
                    "width": "100%",
                  }
                }
              >
                <svg
                  aria-labelledby="victory-container-4-title victory-container-4-desc"
                  height={NaN}
                  role="img"
                  style={
                    Object {
                      "height": "100%",
                      "pointerEvents": "all",
                      "width": "100%",
                    }
                  }
                  viewBox="0 0 NaN NaN"
                  width={NaN}
                >
                  <g>
                    <path
                      d="M0,0Z"
                      role="presentation"
                      shapeRendering="auto"
                      style={
                        Object {
                          "fill": undefined,
                          "padding": 10,
                          "stroke": "transparent",
                          "strokeWidth": 1,
                        }
                      }
                      transform="translate(NaN, NaN)"
                    />
                    <path
                      d="M0,0Z"
                      role="presentation"
                      shapeRendering="auto"
                      style={
                        Object {
                          "fill": undefined,
                          "padding": 10,
                          "stroke": "transparent",
                          "strokeWidth": 1,
                        }
                      }
                      transform="translate(NaN, NaN)"
                    />
                    <path
                      d="M0,0Z"
                      role="presentation"
                      shapeRendering="auto"
                      style={
                        Object {
                          "fill": undefined,
                          "padding": 10,
                          "stroke": "transparent",
                          "strokeWidth": 1,
                        }
                      }
                      transform="translate(NaN, NaN)"
                    />
                    <path
                      d="M0,0Z"
                      role="presentation"
                      shapeRendering="auto"
                      style={
                        Object {
                          "fill": undefined,
                          "padding": 10,
                          "stroke": "transparent",
                          "strokeWidth": 1,
                        }
                      }
                      transform="translate(NaN, NaN)"
                    />
                    <text
                      direction="inherit"
                      dx={0}
                      dy={-2.0300000000000002}
                      x={NaN}
                      y={NaN}
                    >
                      <tspan
                        dx={0}
                        style={
                          Object {
                            "fill": "#252525",
                            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Seravek', 'Trebuchet MS', sans-serif",
                            "fontSize": 14,
                            "letterSpacing": "normal",
                            "padding": 20,
                            "stroke": "transparent",
                          }
                        }
                        textAnchor="middle"
                        x={NaN}
                      >
                        
                      </tspan>
                    </text>
                    <text
                      direction="inherit"
                      dx={0}
                      dy={11.969999999999999}
                      x={NaN}
                      y={NaN}
                    >
                      <tspan
                        dx={0}
                        style={
                          Object {
                            "fill": "#252525",
                            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Seravek', 'Trebuchet MS', sans-serif",
                            "fontSize": 14,
                            "letterSpacing": "normal",
                            "padding": 20,
                            "stroke": "transparent",
                          }
                        }
                        textAnchor="middle"
                        x={NaN}
                      >
                        100%
                      </tspan>
                    </text>
                    <text
                      direction="inherit"
                      dx={0}
                      dy={-2.0300000000000002}
                      x={NaN}
                      y={NaN}
                    >
                      <tspan
                        dx={0}
                        style={
                          Object {
                            "fill": "#252525",
                            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Seravek', 'Trebuchet MS', sans-serif",
                            "fontSize": 14,
                            "letterSpacing": "normal",
                            "padding": 20,
                            "stroke": "transparent",
                          }
                        }
                        textAnchor="middle"
                        x={NaN}
                      >
                        
                      </tspan>
                    </text>
                    <text
                      direction="inherit"
                      dx={0}
                      dy={-2.0300000000000002}
                      x={NaN}
                      y={NaN}
                    >
                      <tspan
                        dx={0}
                        style={
                          Object {
                            "fill": "#252525",
                            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Seravek', 'Trebuchet MS', sans-serif",
                            "fontSize": 14,
                            "letterSpacing": "normal",
                            "padding": 20,
                            "stroke": "transparent",
                          }
                        }
                        textAnchor="middle"
                        x={NaN}
                      >
                        
                      </tspan>
                    </text>
                  </g>
                </svg>
                <div
                  style={
                    Object {
                      "height": "100%",
                      "left": 0,
                      "position": "absolute",
                      "top": 0,
                      "width": "100%",
                      "zIndex": 99,
                    }
                  }
                >
                  <svg
                    height={NaN}
                    style={
                      Object {
                        "height": "100%",
                        "overflow": "visible",
                        "width": "100%",
                      }
                    }
                    viewBox="0 0 NaN NaN"
                    width={NaN}
                  />
                </div>
              </div>
            </div>
            <div
              className="investment-allocation__expenses"
            >
              <div
                className="investment-allocation__row investment-allocation__row--empty"
              >
                <div
                  className="investment-allocation__title investment-allocation__title--reputation-building"
                >
                  Reputation Building
                </div>
                <div
                  className="investment-allocation__value"
                >
                  $0
                </div>
              </div>
              <div
                className="investment-allocation__row investment-allocation__row--empty"
              >
                <div
                  className="investment-allocation__title investment-allocation__title--demand-creation"
                >
                  Demand Creation
                </div>
                <div
                  className="investment-allocation__value"
                >
                  $0
                </div>
              </div>
              <div
                className="investment-allocation__row"
              >
                <div
                  className="investment-allocation__title investment-allocation__title--leasing-enablement"
                >
                  Leasing Enablement
                </div>
                <div
                  className="investment-allocation__value"
                >
                  $6k
                </div>
              </div>
              <div
                className="investment-allocation__row investment-allocation__row--empty"
              >
                <div
                  className="investment-allocation__title investment-allocation__title--market-intelligence"
                >
                  Market Intelligence
                </div>
                <div
                  className="investment-allocation__value"
                >
                  $0
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SectionHeader renders empty pie 1`] = `
<div>
  <div
    className="box-row box-row--normal"
  >
    <div
      className="child-wrapper"
      style={
        Object {
          "width": "50.00000%",
        }
      }
    >
      <div
        className="report-section"
      >
        <div
          className="section-header"
        >
          <p
            className="section-header__title"
          >
            Acquisition
          </p>
        </div>
        <div
          className="panel panel--default small-box"
        >
          <div
            className="small-box__labels"
          >
            <span
              className="small-box__labels__name"
            >
              Leased Unit Change
            </span>
            <span
              className="small-box__labels__detail"
            >
              Target: 11
            </span>
          </div>
          <div
            className="small-box__outer-content"
          >
            <span
              className="small-box__inner-content"
            >
              <span
                className="delta-layout"
              >
                <span
                  className="formatted-value-with-symbol"
                >
                  <span
                    className="formatted-value-with-symbol__plus"
                  >
                    +
                  </span>
                  9
                </span>
              </span>
            </span>
          </div>
        </div>
        <div
          className="panel panel--default small-box"
        >
          <div
            className="small-box__labels"
          >
            <span
              className="small-box__labels__name"
            >
              Acquisition Investment
            </span>
            <span
              className="small-box__labels__detail"
            >
              Target: $15k
            </span>
          </div>
          <div
            className="small-box__outer-content"
          >
            <span
              className="small-box__inner-content"
            >
              <span
                className="delta-layout"
              >
                <span
                  className="formatted-value-with-symbol"
                >
                  $14k
                </span>
              </span>
            </span>
          </div>
        </div>
        <div
          className="panel panel--default small-box"
        >
          <div
            className="small-box__labels"
          >
            <span
              className="small-box__labels__name"
            >
              Est. Acquired Leasing Revenue
            </span>
            <span
              className="small-box__labels__detail"
            >
              Target: $228.5k
            </span>
          </div>
          <div
            className="small-box__outer-content"
          >
            <span
              className="small-box__inner-content"
            >
              <span
                className="delta-layout"
              >
                <span
                  className="formatted-value-with-symbol"
                >
                  <span
                    className="formatted-value-with-symbol__plus"
                  >
                    +
                  </span>
                  $199k
                </span>
              </span>
            </span>
          </div>
        </div>
        <div
          className="panel panel--default small-box"
        >
          <div
            className="small-box__labels"
          >
            <span
              className="small-box__labels__name"
            >
              Acquisition ROMI
            </span>
            <span
              className="small-box__labels__detail"
            >
              Target: 7
            </span>
          </div>
          <div
            className="small-box__outer-content"
          >
            <span
              className="small-box__inner-content"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <span
                className="delta-layout"
              >
                <span
                  className="formatted-value-with-symbol"
                >
                  14
                  <span
                    className="formatted-value-with-symbol__times"
                  >
                    x
                  </span>
                </span>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="child-wrapper"
      style={
        Object {
          "width": "50.00000%",
        }
      }
    >
      <div
        className="report-section"
      >
        <div
          className="section-header"
        >
          <p
            className="section-header__title"
          >
            Retention
          </p>
        </div>
        <div
          className="panel panel--default small-box"
        >
          <div
            className="small-box__labels"
          >
            <span
              className="small-box__labels__name"
            >
              Lease Renewals
            </span>
            <span
              className="small-box__labels__detail"
            >
              Target: 10
            </span>
          </div>
          <div
            className="small-box__outer-content"
          >
            <span
              className="small-box__inner-content"
            >
              <span
                className="delta-layout"
              >
                <span
                  className="formatted-value-with-symbol"
                >
                  7
                </span>
                <span
                  className="delta-layout__section"
                >
                  <div
                    className="delta-indicator"
                  >
                    <span
                      className="delta-indicator__delta"
                    >
                      2
                    </span>
                     
                    <span
                      className="delta-indicator__arrow delta-indicator__trend-up"
                    >
                      <svg
                        aria-hidden="true"
                        color="inherit"
                        focusable="false"
                        height={5}
                        role="presentation"
                        viewBox="0 0 10 5"
                        width={10}
                      >
                        <path
                          d="M5 0l5 5H0z"
                          fill="currentColor"
                          fillRule="evenodd"
                        />
                      </svg>
                    </span>
                  </div>
                </span>
              </span>
            </span>
          </div>
        </div>
        <div
          className="panel panel--default small-box"
        >
          <div
            className="small-box__labels"
          >
            <span
              className="small-box__labels__name"
            >
              Retention Investment
            </span>
            <span
              className="small-box__labels__detail"
            >
              Target: $2k
            </span>
          </div>
          <div
            className="small-box__outer-content"
          >
            <span
              className="small-box__inner-content"
            >
              <span
                className="delta-layout"
              >
                <span
                  className="formatted-value-with-symbol"
                >
                  $2k
                </span>
              </span>
            </span>
          </div>
        </div>
        <div
          className="panel panel--default small-box"
        >
          <div
            className="small-box__labels"
          >
            <span
              className="small-box__labels__name"
            >
              Est. Retained Leasing Revenue
            </span>
            <span
              className="small-box__labels__detail"
            >
              Target: $266.6k
            </span>
          </div>
          <div
            className="small-box__outer-content"
          >
            <span
              className="small-box__inner-content"
            >
              <span
                className="delta-layout"
              >
                <span
                  className="formatted-value-with-symbol"
                >
                  <span
                    className="formatted-value-with-symbol__plus"
                  >
                    +
                  </span>
                  $155.1k
                </span>
              </span>
            </span>
          </div>
        </div>
        <div
          className="panel panel--default small-box"
        >
          <div
            className="small-box__labels"
          >
            <span
              className="small-box__labels__name"
            >
              Retention ROMI
            </span>
            <span
              className="small-box__labels__detail"
            >
              Target: 142
            </span>
          </div>
          <div
            className="small-box__outer-content"
          >
            <span
              className="small-box__inner-content"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <span
                className="delta-layout"
              >
                <span
                  className="formatted-value-with-symbol"
                >
                  78
                  <span
                    className="formatted-value-with-symbol__times"
                  >
                    x
                  </span>
                </span>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="box-row box-row--normal"
  >
    <div
      className="child-wrapper"
      style={
        Object {
          "width": "50.00000%",
        }
      }
    >
      <div
        className="investment-allocation"
      >
        <div
          className="report-section"
        >
          <div
            className="section-header"
          >
            <p
              className="section-header__title"
            >
              acquisition INVESTMENT ALLOCATIONS
            </p>
          </div>
          <div
            className="investment-allocation__body"
          >
            <div
              className="investment-allocation__chart"
            >
              <div
                className="VictoryContainer"
                style={
                  Object {
                    "height": "100%",
                    "pointerEvents": "none",
                    "position": "relative",
                    "touchAction": "none",
                    "width": "100%",
                  }
                }
              >
                <svg
                  aria-labelledby="victory-container-1-title victory-container-1-desc"
                  height={NaN}
                  role="img"
                  style={
                    Object {
                      "height": "100%",
                      "pointerEvents": "all",
                      "width": "100%",
                    }
                  }
                  viewBox="0 0 NaN NaN"
                  width={NaN}
                >
                  <g>
                    <path
                      d="M0,0Z"
                      role="presentation"
                      shapeRendering="auto"
                      style={
                        Object {
                          "fill": undefined,
                          "padding": 10,
                          "stroke": "transparent",
                          "strokeWidth": 1,
                        }
                      }
                      transform="translate(NaN, NaN)"
                    />
                    <path
                      d="M0,0Z"
                      role="presentation"
                      shapeRendering="auto"
                      style={
                        Object {
                          "fill": undefined,
                          "padding": 10,
                          "stroke": "transparent",
                          "strokeWidth": 1,
                        }
                      }
                      transform="translate(NaN, NaN)"
                    />
                    <path
                      d="M0,0Z"
                      role="presentation"
                      shapeRendering="auto"
                      style={
                        Object {
                          "fill": undefined,
                          "padding": 10,
                          "stroke": "transparent",
                          "strokeWidth": 1,
                        }
                      }
                      transform="translate(NaN, NaN)"
                    />
                    <path
                      d="M0,0Z"
                      role="presentation"
                      shapeRendering="auto"
                      style={
                        Object {
                          "fill": undefined,
                          "padding": 10,
                          "stroke": "transparent",
                          "strokeWidth": 1,
                        }
                      }
                      transform="translate(NaN, NaN)"
                    />
                    <text
                      direction="inherit"
                      dx={0}
                      dy={-2.0300000000000002}
                      x={NaN}
                      y={NaN}
                    >
                      <tspan
                        dx={0}
                        style={
                          Object {
                            "fill": "#252525",
                            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Seravek', 'Trebuchet MS', sans-serif",
                            "fontSize": 14,
                            "letterSpacing": "normal",
                            "padding": 20,
                            "stroke": "transparent",
                          }
                        }
                        textAnchor="middle"
                        x={NaN}
                      >
                        
                      </tspan>
                    </text>
                    <text
                      direction="inherit"
                      dx={0}
                      dy={-2.0300000000000002}
                      x={NaN}
                      y={NaN}
                    >
                      <tspan
                        dx={0}
                        style={
                          Object {
                            "fill": "#252525",
                            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Seravek', 'Trebuchet MS', sans-serif",
                            "fontSize": 14,
                            "letterSpacing": "normal",
                            "padding": 20,
                            "stroke": "transparent",
                          }
                        }
                        textAnchor="middle"
                        x={NaN}
                      >
                        
                      </tspan>
                    </text>
                    <text
                      direction="inherit"
                      dx={0}
                      dy={4.97}
                      x={NaN}
                      y={NaN}
                    >
                      <tspan
                        dx={0}
                        style={
                          Object {
                            "fill": "#252525",
                            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Seravek', 'Trebuchet MS', sans-serif",
                            "fontSize": 14,
                            "letterSpacing": "normal",
                            "padding": 20,
                            "stroke": "transparent",
                          }
                        }
                        textAnchor="start"
                        x={NaN}
                      >
                        70%
                      </tspan>
                    </text>
                    <text
                      direction="inherit"
                      dx={0}
                      dy={4.97}
                      x={NaN}
                      y={NaN}
                    >
                      <tspan
                        dx={0}
                        style={
                          Object {
                            "fill": "#252525",
                            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Seravek', 'Trebuchet MS', sans-serif",
                            "fontSize": 14,
                            "letterSpacing": "normal",
                            "padding": 20,
                            "stroke": "transparent",
                          }
                        }
                        textAnchor="end"
                        x={NaN}
                      >
                        30%
                      </tspan>
                    </text>
                  </g>
                </svg>
                <div
                  style={
                    Object {
                      "height": "100%",
                      "left": 0,
                      "position": "absolute",
                      "top": 0,
                      "width": "100%",
                      "zIndex": 99,
                    }
                  }
                >
                  <svg
                    height={NaN}
                    style={
                      Object {
                        "height": "100%",
                        "overflow": "visible",
                        "width": "100%",
                      }
                    }
                    viewBox="0 0 NaN NaN"
                    width={NaN}
                  />
                </div>
              </div>
            </div>
            <div
              className="investment-allocation__expenses"
            >
              <div
                className="investment-allocation__row"
              >
                <div
                  className="investment-allocation__title investment-allocation__title--reputation-building"
                >
                  Reputation Building
                </div>
                <div
                  className="investment-allocation__value"
                >
                  $20k
                </div>
              </div>
              <div
                className="investment-allocation__row"
              >
                <div
                  className="investment-allocation__title investment-allocation__title--demand-creation"
                >
                  Demand Creation
                </div>
                <div
                  className="investment-allocation__value"
                >
                  $48k
                </div>
              </div>
              <div
                className="investment-allocation__row investment-allocation__row--empty"
              >
                <div
                  className="investment-allocation__title investment-allocation__title--leasing-enablement"
                >
                  Leasing Enablement
                </div>
                <div
                  className="investment-allocation__value"
                >
                  $0
                </div>
              </div>
              <div
                className="investment-allocation__row investment-allocation__row--empty"
              >
                <div
                  className="investment-allocation__title investment-allocation__title--market-intelligence"
                >
                  Market Intelligence
                </div>
                <div
                  className="investment-allocation__value"
                >
                  $0
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="child-wrapper"
      style={
        Object {
          "width": "50.00000%",
        }
      }
    >
      <div
        className="investment-allocation"
      >
        <div
          className="report-section"
        >
          <div
            className="section-header"
          >
            <p
              className="section-header__title"
            >
              retention INVESTMENT ALLOCATIONS
            </p>
          </div>
          <div
            className="investment-allocation__body"
          >
            <div
              className="investment-allocation__chart"
            >
              <div
                className="VictoryContainer"
                style={
                  Object {
                    "border": "1px dashed",
                    "borderColor": undefined,
                    "borderRadius": "50%",
                    "height": "100%",
                    "pointerEvents": "none",
                    "position": "relative",
                    "touchAction": "none",
                    "width": "100%",
                  }
                }
              >
                <svg
                  aria-labelledby="victory-container-2-title victory-container-2-desc"
                  height={NaN}
                  role="img"
                  style={
                    Object {
                      "height": "100%",
                      "pointerEvents": "all",
                      "width": "100%",
                    }
                  }
                  viewBox="0 0 NaN NaN"
                  width={NaN}
                >
                  <g>
                    <path
                      d="M0,0Z"
                      role="presentation"
                      shapeRendering="auto"
                      style={
                        Object {
                          "fill": undefined,
                          "padding": 10,
                          "stroke": "transparent",
                          "strokeWidth": 1,
                        }
                      }
                      transform="translate(NaN, NaN)"
                    />
                    <path
                      d="M0,0Z"
                      role="presentation"
                      shapeRendering="auto"
                      style={
                        Object {
                          "fill": undefined,
                          "padding": 10,
                          "stroke": "transparent",
                          "strokeWidth": 1,
                        }
                      }
                      transform="translate(NaN, NaN)"
                    />
                    <path
                      d="M0,0Z"
                      role="presentation"
                      shapeRendering="auto"
                      style={
                        Object {
                          "fill": undefined,
                          "padding": 10,
                          "stroke": "transparent",
                          "strokeWidth": 1,
                        }
                      }
                      transform="translate(NaN, NaN)"
                    />
                    <path
                      d="M0,0Z"
                      role="presentation"
                      shapeRendering="auto"
                      style={
                        Object {
                          "fill": undefined,
                          "padding": 10,
                          "stroke": "transparent",
                          "strokeWidth": 1,
                        }
                      }
                      transform="translate(NaN, NaN)"
                    />
                    <text
                      direction="inherit"
                      dx={0}
                      dy={-2.0300000000000002}
                      x={NaN}
                      y={NaN}
                    >
                      <tspan
                        dx={0}
                        style={
                          Object {
                            "fill": "#252525",
                            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Seravek', 'Trebuchet MS', sans-serif",
                            "fontSize": 14,
                            "letterSpacing": "normal",
                            "padding": 20,
                            "stroke": "transparent",
                          }
                        }
                        textAnchor="middle"
                        x={NaN}
                      >
                        
                      </tspan>
                    </text>
                    <text
                      direction="inherit"
                      dx={0}
                      dy={-2.0300000000000002}
                      x={NaN}
                      y={NaN}
                    >
                      <tspan
                        dx={0}
                        style={
                          Object {
                            "fill": "#252525",
                            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Seravek', 'Trebuchet MS', sans-serif",
                            "fontSize": 14,
                            "letterSpacing": "normal",
                            "padding": 20,
                            "stroke": "transparent",
                          }
                        }
                        textAnchor="middle"
                        x={NaN}
                      >
                        
                      </tspan>
                    </text>
                    <text
                      direction="inherit"
                      dx={0}
                      dy={-2.0300000000000002}
                      x={NaN}
                      y={NaN}
                    >
                      <tspan
                        dx={0}
                        style={
                          Object {
                            "fill": "#252525",
                            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Seravek', 'Trebuchet MS', sans-serif",
                            "fontSize": 14,
                            "letterSpacing": "normal",
                            "padding": 20,
                            "stroke": "transparent",
                          }
                        }
                        textAnchor="middle"
                        x={NaN}
                      >
                        
                      </tspan>
                    </text>
                    <text
                      direction="inherit"
                      dx={0}
                      dy={-2.0300000000000002}
                      x={NaN}
                      y={NaN}
                    >
                      <tspan
                        dx={0}
                        style={
                          Object {
                            "fill": "#252525",
                            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Seravek', 'Trebuchet MS', sans-serif",
                            "fontSize": 14,
                            "letterSpacing": "normal",
                            "padding": 20,
                            "stroke": "transparent",
                          }
                        }
                        textAnchor="middle"
                        x={NaN}
                      >
                        
                      </tspan>
                    </text>
                  </g>
                </svg>
                <div
                  style={
                    Object {
                      "height": "100%",
                      "left": 0,
                      "position": "absolute",
                      "top": 0,
                      "width": "100%",
                      "zIndex": 99,
                    }
                  }
                >
                  <svg
                    height={NaN}
                    style={
                      Object {
                        "height": "100%",
                        "overflow": "visible",
                        "width": "100%",
                      }
                    }
                    viewBox="0 0 NaN NaN"
                    width={NaN}
                  />
                </div>
              </div>
            </div>
            <div
              className="investment-allocation__expenses"
            >
              <div
                className="investment-allocation__row investment-allocation__row--empty"
              >
                <div
                  className="investment-allocation__title investment-allocation__title--reputation-building"
                >
                  Reputation Building
                </div>
                <div
                  className="investment-allocation__value"
                >
                  $0
                </div>
              </div>
              <div
                className="investment-allocation__row investment-allocation__row--empty"
              >
                <div
                  className="investment-allocation__title investment-allocation__title--demand-creation"
                >
                  Demand Creation
                </div>
                <div
                  className="investment-allocation__value"
                >
                  $0
                </div>
              </div>
              <div
                className="investment-allocation__row investment-allocation__row--empty"
              >
                <div
                  className="investment-allocation__title investment-allocation__title--leasing-enablement"
                >
                  Leasing Enablement
                </div>
                <div
                  className="investment-allocation__value"
                >
                  $0
                </div>
              </div>
              <div
                className="investment-allocation__row investment-allocation__row--empty"
              >
                <div
                  className="investment-allocation__title investment-allocation__title--market-intelligence"
                >
                  Market Intelligence
                </div>
                <div
                  className="investment-allocation__value"
                >
                  $0
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
